Fixed footer spacing

--- a/ghi/app/src/index.css
+++ b/ghi/app/src/index.css
@@ -123,9 +123,9 @@ main {
   transition: box-shadow 0.3s linear;
   text-align: center;
 }
-.review:hover {
+/* .review:hover {
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-}
+} */
 .img-container {
   position: relative;
   width: 150px;
